# gitano

./: .env  .env.example  AGENTS.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  skills-lock.json  tailwind.config.js  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: git.rs  integrations.rs  lib.rs  licensing.rs  main.rs  platform.rs
src-tauri/src/ai/: acp_client.rs  cache.rs  commands.rs  context_window.rs  entitlement.rs  external_agents.rs  git_context.rs  machine.rs  mod.rs  models.rs  ollama.rs  prompts.rs  runtime.rs  types.rs
src-tauri/src/ai/acp_client/: client_requests.rs  events.rs  filesystem.rs  permissions.rs  session_config.rs  terminal.rs  transport.rs
src-tauri/src/ai/commands/: action_context.rs  branch_review.rs  external_agent.rs  external_agent_commands.rs  model_commands.rs  model_helpers.rs  progress.rs  run_actions.rs  run_cache.rs  runtime_commands.rs  warm_models.rs
src-tauri/src/ai/external_agents/: catalog.rs
src-tauri/src/ai/git_context/: branch.rs  branch_refs.rs  branch_review_files.rs  commit.rs  conflicts.rs  review_order.rs  staged.rs
src-tauri/src/ai/models/: catalog.rs  preferences.rs
src-tauri/src/ai/ollama/: generation.rs  progress.rs
src-tauri/src/ai/prompts/: parser.rs  (+1 more)
src-tauri/src/git/: commands.rs  commits.rs  diff.rs  mod.rs  realtime.rs  repository_state.rs  staging.rs  stash.rs  test_support.rs  types.rs  utils.rs  worktree.rs
src-tauri/src/integrations/: credentials.rs  github.rs  preferences.rs  types.rs
(+1283 files in other folders)
