[package]
name = "gitano"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gitano_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
tauri-plugin-dialog = "2"
git2 = { version = "0.20.2", features = ["vendored-libgit2", "vendored-openssl"] }
once_cell = "1.21.3"
rayon = "1.10.0"
tauri-plugin-store = "2.0.0-beta.9"
regex = "1"
tempfile = "3"
notify = "8.2.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.20", default-features = false, features = ["json", "stream", "rustls-tls"] }
base64 = "0.22.1"
ring = "0.17.14"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
